--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sample project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:test": "npx cypress run --browser chrome --headed --record --key 577f0b17-6a01-49ab-b7f9-416c70a7bfab"
   },
   "author": "Krishna",
   "license": "ISC",
